# yolopandas

./: .gitignore  LICENSE  Makefile  README.md  coverage.xml  experiment.ipynb  pandas-wrapper.ipynb  pyproject.toml  requirements.txt
docs/example_notebooks/: example.ipynb
docs/example_notebooks/experimental/: experiment.ipynb
llpandas/: __init__.py  chains.py  lldf.py  llm_accessor.py
tests/: __init__.py  test_llm_accessor.py
tests/data/: product_df.json
tests/integration_tests/: test_llm_accessor.py
tests/unit_tests/: test_llm_accessor.py
utils/: query_helpers.py
yolopandas/: __init__.py  chains.py  llm_accessor.py
yolopandas/utils/: query_helpers.py
