[tool.poetry]
name = "yolopandas"
version = "0.0.5"
description = "Interact with Pandas objects via LLMs and langchain."
authors = []
license = "MIT"
readme = "README.md"
repository = "https://www.github.com/ccurme/yolopandas"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
ipython = "^8.8.0"
langchain = ">= 0.0.60, < 1"
openai = "^0.26.0"
pandas = "^1.4"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[tool.poetry.group.lint.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^6.0.0"

[tool.poetry.group.typing.dependencies]
mypy = "^0.991"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = "True"
disallow_untyped_defs = "True"
exclude = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
